# inkdash

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  package.json
.agents/docs/: ticktick.md
.github/workflows/: build.yml
config/: config.example.toml  timeline.example.toml
docs/: GOOGLE_CALENDAR_SETUP.md  TICKTICK_SETUP.md
docs/plans/: 2025-12-30-dashboard-redesign.md  2025-12-31-api-integration-design.md  2025-12-31-tauri-conversion-design.md  2026-01-05-configurable-timeline-design.md
scripts/: install-inkdash.sh  update-inkdash.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs  timeline.rs
src-tauri/src/api/: calendar.rs  mod.rs  stocks.rs  ticktick.rs  weather.rs
src-tauri/src/oauth/: google.rs
src/api/: stocks.ts  ticktick.ts  weather.ts
src/components/: Dashboard.tsx
src/components/calendar/: CalendarFilter.tsx  CalendarHeader.tsx  CalendarView.tsx  MultiDayView.tsx  WeekView.tsx
src/components/pages/: CalendarPage.tsx  OverviewPage.tsx  StocksPage.tsx  TasksPage.tsx
src/components/ui/: button.tsx  card.tsx  checkbox.tsx
src/components/widgets/: CalendarWidget.tsx  DayTimelineWidget.tsx  StockCard.tsx  TaskItem.tsx  TaskList.tsx  TimeWidget.tsx  (+3 more)
src/config/: calendar.ts  index.ts  stocks.ts  timezones.ts  weather.ts
src/context/: ConfigContext.tsx
src/hooks/: useCalendar.ts  useCalendarEvents.ts  useMultiCalendarEvents.ts  useStocks.ts  useSwipe.ts  useTheme.ts  useTickTick.ts  useWeather.ts
src/types/: index.ts
src/utils/: calendar.ts
